welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:-6: error: Missing closing brace `}' assumed here
try {
^noTriples:1: error: expected class or object definition
def arraytri(nums:Array[Int],n:Int): Boolean = {
^noTriples:10: error: expected class or object definition
def noTriples(nums:Array[Int]): Boolean = {b= false
^